; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_execTuples.c_HeapTupleHeaderGetDatum.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_execTuples.c_HeapTupleHeaderGetDatum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @HeapTupleHeaderGetDatum(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @HeapTupleHeaderHasExternal(i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @PointerGetDatum(i32 %10)
  store i32 %11, i32* %2, align 4
  br label %26

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @HeapTupleHeaderGetTypeId(i32 %13)
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @HeapTupleHeaderGetTypMod(i32 %15)
  %17 = call i32 @lookup_rowtype_tupdesc(i32 %14, i32 %16)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %3, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @HeapTupleHeaderGetDatumLength(i32 %19)
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @toast_flatten_tuple_to_datum(i32 %18, i32 %20, i32 %21)
  store i32 %22, i32* %4, align 4
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @ReleaseTupleDesc(i32 %23)
  %25 = load i32, i32* %4, align 4
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %12, %9
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @HeapTupleHeaderHasExternal(i32) #1

declare dso_local i32 @PointerGetDatum(i32) #1

declare dso_local i32 @lookup_rowtype_tupdesc(i32, i32) #1

declare dso_local i32 @HeapTupleHeaderGetTypeId(i32) #1

declare dso_local i32 @HeapTupleHeaderGetTypMod(i32) #1

declare dso_local i32 @toast_flatten_tuple_to_datum(i32, i32, i32) #1

declare dso_local i32 @HeapTupleHeaderGetDatumLength(i32) #1

declare dso_local i32 @ReleaseTupleDesc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
